# Netpanel

./: .gitignore  README.md
backend/: BUILDING.md  entrypoint.py  main.py  requirements.txt
backend/modules/: commands.py  models.py  normalizers.py  parsers.py  presentation.py
backend/modules/ssh/: client.py  manager.py  session.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  main.ts  styles.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
frontend/src/components/commands/: CommandPanel.vue
frontend/src/components/connection/: ConnectionPanel.vue
frontend/src/components/workspace/: ResultsPane.vue  TerminalPane.vue  WorkspaceHeader.vue
frontend/src/composables/: useBackendSidecar.ts  useCommands.ts  useProfiles.ts  useSession.ts  useTerminal.ts  useUpdateCheck.ts
frontend/src/data/: commandOptions.ts
frontend/src/services/: api.ts
frontend/src/styles/: base.css  controls.css  layout.css  responsive.css  results.css  workspace.css
frontend/src/types/: netpanel.ts
frontend/src/utils/: resultFormatters.ts
packaging/flatpak/: local.cisco-client.app.yml  local.netpanel.app.yml
scripts/: build-flatpak.sh  build-windows.ps1  packages-folder.lnk
