[package]
name = "netpanel"
version = "0.2.0"
description = "Network SSH panel"
authors = ["Netpanel"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1.6", features = [ "clipboard-write-text", "shell-sidecar", "shell-open"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
