[package]
name = "netpanel"
version = "1.6.0"
description = "Network SSH panel"
authors = ["Netpanel"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
base64 = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1.6", features = [ "clipboard-write-text", "shell-sidecar", "shell-open"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.39", features = ["Win32_Foundation", "Win32_Security_Cryptography", "Win32_System_Memory"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
